--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="yeti-bootstrap.css"> <!--Theme from Bootswatch-->
+	<link rel="stylesheet" href="yeti-bootstrap.css"> <!--Yeti's Theme from Bootswatch Fuente:"https://bootswatch.com/yeti/"-->
 	<link rel="stylesheet" href="style.css"> <!--Zamiz's "upgrades"-->
 	<title>Propuesta Fundación Niño y Cáncer</title>
 	<!-- Jquery -->
@@ -13,6 +13,30 @@
 
 </head>
 <body>
+	<div class="top-nav0">
+		<!--Navbar Fuente:"https://bootswatch.com/yeti/"-->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+			<a class="navbar-brand" href="#">
+			<img src="images/nino-y-cancer.gif" class="rounded float-left logo align-self-center" alt="Logo Niño y Cáncer">
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
 
+		  <div class="collapse navbar-collapse" id="navbarColor01">
+		    <ul class="navbar-nav ml-auto"> <!-- Previously "class="navbar-nav mr-auto"" to put the <li> to the right-->
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="noticias.html">Noticias</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="nosotros.html">Nosotros</a>
+		      </li>
+		    </ul>
+		  </div>
+		</nav>
+	</div>
 </body>
 </html>
