--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 </head>
 <body>
-	<div class="top-nav0">
+	<section class="top-nav0 superior-section">
 		<!--Navbar Fuente:"https://bootswatch.com/yeti/"-->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 			<img src="images/nino-y-cancer.gif" class="rounded float-left logo align-self-center" alt="Logo Niño y Cáncer">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
 		  <div class="collapse navbar-collapse" id="navbarColor01">
 		    <ul class="navbar-nav ml-auto"> <!-- Previously "class="navbar-nav mr-auto"" to put the <li> to the right-->
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+		        <a class="nav-link" href="index.html">Home</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="noticias.html">Noticias</a>
@@ -37,6 +37,58 @@
 		    </ul>
 		  </div>
 		</nav>
+	</section>
+	
+	<!--Banner-->
+	<div class="pad-top pad-bottom bg-light">
+		<!-- First SubSection -->
+		<div class="col-12 col-sm-12 offset-md-2 col-md-8 text-center">
+			<h1>TODAS LAS SONRISAS SON GRATIS</h1>
+			<h2>Pero unas cuestan más que otras...</h2>
+		</div>
+		<!-- Second SubSection -->
+		<div class="col-12 col-sm-12 offset-md-3 col-md-6 text-center">
+			<button type="button" class="btn btn-success space-top">Dona a la Fundación</button>
+		</div>
+	</div>		
+	<!-- Carousel -->
+	<div class="container-fluid space-top space-bottom">
+		<div>
+		<h5>LA FUNDACIÓN NIÑO Y CÁNCER</h5>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel leo fringilla, cursus quam a, tincidunt lectus. Vestibulum malesuada urna quis nulla accumsan pulvinar. Etiam tincidunt est feugiat accumsan facilisis.</p>
+		</div>
+		<div class="row">
+			<div class="col-12 col-sm-12 offset-md-1 col-md-10 text-center">
+			<!--Carousel Fuente:"https://getbootstrap.com/docs/4.1/components/carousel/#with-controls"-->			
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				  <ol class="carousel-indicators">
+				    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				  </ol>
+				  <div class="carousel-inner">
+				    <div class="carousel-item active">
+				      <img class="d-block w-100" src="images/cancerrecoverychildren-bg.jpg" alt="Recuperación de Niño">
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="images/sickchildren-bg.jpg" alt="Niño enfermo">
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="images/children-bg.jpg" alt="Niños jugando">
+				    </div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Anterior</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Siguiente</span>
+				  </a>
+				</div>
+			</div>
+		</div>		
+
 	</div>
 </body>
 </html>
