--- a/nosotros.html
+++ b/nosotros.html
@@ -16,7 +16,7 @@
 	<div class="top-nav0">
 		<!--Navbar Fuente:"https://bootswatch.com/yeti/"-->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 			<img src="images/nino-y-cancer.gif" class="rounded float-left logo align-self-center" alt="Logo Niño y Cáncer">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,13 +25,13 @@
 
 		  <div class="collapse navbar-collapse" id="navbarColor01">
 		    <ul class="navbar-nav ml-auto"> <!-- Previously "class="navbar-nav mr-auto"" to put the <li> to the right-->
-		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+		      <li class="nav-item">
+		        <a class="nav-link" href="index.html">Home</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="noticias.html">Noticias</a>
 		      </li>
-		      <li class="nav-item">
+		      <li class="nav-item active">
 		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
 		    </ul>
