+Footer +Thumbnail +index

--- a/noticias.html
+++ b/noticias.html
@@ -17,7 +17,7 @@
 		<!--Navbar Fuente:"https://bootswatch.com/yeti/"-->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 			<a class="navbar-brand" href="index.html">
-			<img src="images/nino-y-cancer.gif" class="rounded float-left logo align-self-center" alt="Logo Niño y Cáncer">
+			<img src="images/ninocancerlogo-itried.png" class="rounded float-left logo align-self-center" alt="Logo Niño y Cáncer">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 			  <span class="navbar-toggler-icon"></span>
@@ -38,5 +38,44 @@
 		  </div>
 		</nav>
 	</div>
+	<footer class="container-fluid border-top pad-top">
+		<div class="row">
+			<div class="col-12 col-sm-12 offset-md-1 col-md-2 text-left"> <!-- First Column -->
+				<h5>Contacto</h5>
+				<h6>Fundación Niño y Cáncer</h6>
+				<p>Tupungato 10070 Vitacura, Santiago de Chile</p>
+				<p>Cta Corriente: Banco BCI N° 85999997</p>
+				<p>Fono: +56 22170821 - +56 22170811</p>
+				<p>Visita nuestro <a href="https://www.facebook.com/ninoycancer/">Facebook</a></p>
+				<p><a href="mailto:fundacion@ninoycancer.cl">fundacion@ninoycancer.cl</a></p>
+			</div>
+			<div class="col-12 col-sm-10 col-md-4 pad-top pad-bottom">
+				<iframe class="embed-responsive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1sen!2scl!4v1537137673148" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-12 col-sm-10 col-md-4"> <!-- Second Column -->	
+				<!-- Imported from Bootstrap theme navbar-->
+				<h5>Suscríbete y te llamamos!</h5>
+				<p>Lorem Ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				<!-- Contact Form; Source "https://getbootstrap.com/docs/4.1/components/forms/#auto-sizing" -->
+				<form>
+				  <div class="form-row align-items-center">
+				    <div class="col-auto">
+				      <label class="sr-only" for="inlineFormInput">Mail</label>
+				      <input type="text" required class="form-control mb-2" id="inlineFormInput" placeholder="Ingresa tu email"> <!--How to require a field; Source"https://learn.freecodecamp.org/responsive-web-design/basic-html-and-html5/use-html5-to-require-a-field" -->
+				    </div>
+				    <div class="col-auto">
+				      <label class="sr-only" for="inlineFormInput">teléfono</label>
+				      <input type="text" required class="form-control mb-2" id="inlineFormInput" placeholder="Ingresa tu teléfono">
+				    </div>
+				    <div class="col-auto">
+				      <button type="submit" class="btn btn-primary mb-2">Enviar</button>
+				    </div>
+				  </div>
+				</form>
+				
+		        </div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
