--- a/nosotros.html
+++ b/nosotros.html
@@ -38,6 +38,27 @@
 		  </div>
 		</nav>
 	</div>
+<!-- INFO -->
+	<div class="col-12 col-sm-12 offset-md-3 col-md-6 text-center pad-top pad-bottom">
+		<h1>QUIÉNES SOMOS</h1>
+		<p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.
+		En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
+	</div>
+	<div class="col-12 col-sm-12 offset-md-3 col-md-6 pad-top pad-bottom">
+		<h1 class="text-center">NUESTROS OBJETIVOS - MISIÓN</h1>
+		<ul class="text-justified">
+			<li>Apoyar el tratamiento de la enfermedad</li>
+			<li>Generamos espacios de recreación y mejoramos la calidad de vida del niño durante y después de su tratamiento</li>
+			<li>Rehabilitamos al niño tratado y posteriormente lo integramos a la  sociedad (Becas de Estudios)</li>
+		</ul>
+	</div>
+	<div class="col-12 col-sm-12 offset-md-3 col-md-6 text-center jumbotron">
+		<h5>SOLICITA INFORMACIÓN E INSCRÍBETE COMO VOLUNTARIO</h5>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<button type="button" class="btn btn-info">Inscríbete!</button>
+		<p>Vive la experiencia Desafío Latam!</p>
+	</div>
+
 
 	<footer class="container-fluid border-top pad-top">
 		<div class="row">
